--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_show_image">ShowImage</string>
+    <string name="title_activity_show_repositories">showRepositories</string>
 </resources>
